completed the layout of the web --5

--- a/index.html
+++ b/index.html
@@ -127,5 +127,45 @@
             </div>
         </div>
     </section><!-- ---------------/FORM--------------- -->
+
+    <section class="social">
+        <div class="social__container">
+            <a class="social__link" href="#">
+                <svg class="social__icon">
+                    <use href="img/sprite.svg#icon-facebook-with-circle"></use>
+                </svg>
+            </a>
+            <a class="social__link" href="#">
+                <svg class="social__icon">
+                    <use href="img/sprite.svg#icon-twitter-with-circle"></use>
+                </svg>
+            </a>
+            <a class="social__link" href="#">
+                <svg class="social__icon">
+                    <use href="img/sprite.svg#icon-linkedin-with-circle"></use>
+                </svg>
+            </a>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__main">
+                <a href="#" class="footer__main-link">Lorem</a>
+                <a href="#" class="footer__main-link">About me</a>
+                <a href="#" class="footer__main-link">Contact</a>
+            </div>
+            <hr>
+            <div class="footer__bottom">
+                <div class="footer__bottom-left">
+                    &copy; FMwebdesigns&solutions.com
+                </div>
+
+                <div class="footer__bottom-right">
+                    <a href="#">privacy policy</a> <a href="#">terms & conditions</a>
+                </div> 
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
