--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.comp.css">
     <title>FM webdesign & solutions</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
         <div class="banner"><!-- ---------------BANNER--------------- -->
             <div class="banner__container">
                 <div class="banner__box">
-                    <h1 class="banner__main heading-1 mb-sm">We help your company get more customers</h1>
+                    <h1 class="banner__main mb-sm">We help your company get more customers</h1>
                     <p class="banner__paragraph mb-md">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis rem ullam earum ea, quas similique veritatis maxime mollitia.</p>
                     <div class="banner__btn">
                         <a class="btn btn--primary banner__btn--primary" href="#">Get more customers</a>
@@ -88,16 +88,16 @@
             <div class="customers__box">
                 <div class="customers__img customers__img--1"></div>
                 <div class="customers__text-box">
-                    <blockquote class="mb-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati unde optio a labore molestiae corporis sint neque ea excepturi maxime.</blockquote>
-                    <cite>- Ethan Hunt</cite>
+                    <blockquote class="mb-sm">&#8221;Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati unde optio a labore molestiae corporis sint neque ea excepturi maxime.&#8221;</blockquote>
+                    <cite>- Mary Ann</cite>
                 </div>
             </div>
 
             <div class="customers__box">
                 <div class="customers__img customers__img--2"></div>
                 <div class="customers__text-box">
-                    <blockquote class="mb-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati unde optio a labore molestiae corporis sint neque ea excepturi maxime.</blockquote>
-                    <cite>- Shaher Harden</cite>
+                    <blockquote class="mb-sm">&#8221;Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati unde optio a labore molestiae corporis sint neque ea excepturi maxime.&#8221;</blockquote>
+                    <cite>- Elinor Olsen</cite>
                 </div>
             </div>
         </div>
